tests/negative/gold/bad_literalB_test.gold
tests/negative/bad_literalB_test.toit:6:9: error: Hex literals may not be negated
  print -0x0
        ^~~~
tests/negative/bad_literalB_test.toit:7:9: error: Binary literals may not be negated
  print -0b0
        ^~~~
tests/negative/bad_literalB_test.toit:8:9: error: Literal doesn't fit 64 bits
  print 0x1_0000_0000_0000_0000
        ^~~~~~~~~~~~~~~~~~~~~~~
tests/negative/bad_literalB_test.toit:9:9: error: Literal doesn't fit 64 bits
  print 0b1_0000_0000_0000_0000_0000_0000_0000_0000_0000_0000_0000_0000_0000_0000_0000_0000
        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
tests/negative/bad_literalB_test.toit:10:9: error: Literal doesn't fit 64 bits
  print 9223372036854775808
        ^~~~~~~~~~~~~~~~~~~
tests/negative/bad_literalB_test.toit:11:9: error: Literal doesn't fit 64 bits
  print -9223372036854775809
        ^~~~~~~~~~~~~~~~~~~~
Compilation failed.
